main.css
/* ... */
  .slider__slide_slide-1::after {
    position: absolute;
    top: 53px;
    left: 113px;
    display: block;
    width: 240px;
    height: 483px;
    content: "";
    background-image: url("./assets/images/iphone/Shadow.png");
    background-size: cover; }
  .slider__slide_slide-1 {
    position: absolute;
    left: 0;
    display: none; }
  .slider__slide_slide-2 {
    position: absolute;
    left: 0;
    display: none; }
  .slider_active, .slider_next {
    display: block; }

@media (min-width: 768px) and (max-width: 1019px) {
  .slider {
    width: 768px;
    height: 447px; }
    .slider__control_previous {
      background-position: 41px 210px; }
    .slider__control_next {
      background-position: 42px 210px; }
    .slider__slide_slide-1::before {
      left: 404px;
      width: 180px;
      height: 363px; }
    .slider__slide_slide-1::after {
      top: 53px;
      left: 100px;
      width: 180px;
      height: 363px; } }

@media (min-width: 320px) and (max-width: 767px) {
  .slider {
    width: 375px;
    height: 218px; }
    .slider__control_previous {
      background-position: 10px 98px; }
    .slider__control_next {
      background-position: 12px 95px; }
    .slider__slide_slide-1::before {
      top: 25px;
      left: 200px;
      width: 88px;
      height: 177px; }
    .slider__slide_slide-1::after {
      top: 24px;
      left: 50px;
      width: 88px;
      height: 177px; } }

.controls__list {
  position: relative;
  z-index: 9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-between;
  padding: 0;
  margin: 0;
  list-style: none; }
  .controls__list_control {
    box-sizing: border-box;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    width: 100px;
    height: 600px;
    padding: 0;
    cursor: pointer;
    background-color: transparent;
    background-repeat: no-repeat;
    border: none;
    outline: none;
    mix-blend-mode: normal;
    -webkit-transition: all 0.2s linear;
    transition: all 0.2s linear;
    -webkit-backdrop-filter: blur(2px);
            backdrop-filter: blur(2px); }
    .controls__list_control:focus {
      outline: 1px dotted rgba(128, 128, 128, 0.2);
      -webkit-transition: all 0.2s linear;
      transition: all 0.2s linear; }

@media (min-width: 768px) and (max-width: 1019px) {
  .controls__list_control {
    height: 447px; } }

@media (min-width: 320px) and (max-width: 767px) {
  .controls__list_control {
    width: 40px;
    height: 218px; } }

.iphone {
  position: absolute;
  z-index: 1;
  width: 218px;
  height: 460px;
  background-image: url("./assets/images/iphone/iPhone_Vertical.svg");
  background-repeat: no-repeat; }
  .iphone_three-phones {
    position: absolute;
    top: 5px;
    left: 112px;
    width: 800px;
    height: 590px;
    background-image: url("./assets/images/slider/Slide-2.svg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover; }
  .iphone_vertical {
    top: 53px;
    left: 112px;
    cursor: pointer;
    -webkit-transition: background 0.4s ease-in;
    transition: background 0.4s ease-in; }
    .iphone_vertical::after {
      position: absolute;
      top: 62px;
      left: 11px;
      box-sizing: border-box;
      display: block;
      width: 194px;
      height: 339px;
      content: "";
      background-image: url("./assets/images/iphone/Layer_6.jpg");
      background-repeat: no-repeat;
      background-position: center;
      background-size: contain;
      border: 2px solid #c6c6c6;
      border-radius: 3px; }
    .iphone_vertical-off::after {
      background: black;
      background-image: -webkit-linear-gradient(left, #1f1c1a 0.1%, #000000 99.99%);
      background-image: linear-gradient(to right, #1f1c1a 0.1%, #000000 99.99%); }
  .iphone_horizontal {
    top: 53px;
    left: 544px;
    cursor: pointer;
    -webkit-transform: rotate(90deg);
        -ms-transform: rotate(90deg);
            transform: rotate(90deg); }
    .iphone_horizontal::after {
      position: absolute;
      top: 134px;
      right: -60px;
      box-sizing: border-box;
      display: block;
      width: 339px;
      height: 194px;
      content: "";
      background-image: url("./assets/images/iphone/Layer_5.jpg");
      background-repeat: no-repeat;
      background-position: center;
      background-size: contain;
      border: 2px solid #c6c6c6;
      border-radius: 3px;
      -webkit-transform: rotate(-90deg);
          -ms-transform: rotate(-90deg);
              transform: rotate(-90deg); }
    .iphone_horizontal-off::after {
      background: black;
      background-image: -webkit-linear-gradient(left, #1f1c1a 0.1%, #000000 99.99%);
      background-image: linear-gradient(to right, #1f1c1a 0.1%, #000000 99.99%); }

@media (min-width: 768px) and (max-width: 1019px) {
  .iphone {
    width: 162px;
    height: 344px;
    background-size: cover; }
    .iphone_vertical {
      left: 100px; }
      .iphone_vertical::after {
        top: 55px;
        width: 142px;
        height: 250px; }
    .iphone_horizontal {
      left: 404px; }
      .iphone_horizontal::after {
        top: 104px;
        right: -45px;
        width: 250px;
        height: 142px; }
    .iphone_three-phones {
      top: 15px;
      left: 70px;
      width: 650px;
      height: 420px; } }
/* ... */

